examples/test/testpolicy13689.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13689
  namespace: namespace235
spec:
  podSelector:
    matchLabels:
      key15: value10
      key22: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value37
      podSelector:
        matchLabels:
          key9: value46
          key15: value43
          key40: value9
